# portef-lje_Software

./: README.md
Diagrammer/: .$ERSecondIt.png.bkp  .$UMLFirstIt.png.dtmp  .$UMLSecondIt.png.bkp  .$UseCaseFirstIt.png.bkp  .$UseCaseSecondIt.png.bkp
Diagrammer/SecondIt/: .$ERSecondIt.png.bkp  .$UMLSecondIt.png.bkp
Dokumenter/: FinalIteration.odg
Game_Folder/: LoTR  cave.h  databases_iit.txt  enemy.h  interface.cpp  magicshop.cpp  main.cpp
LoTR/: CMakeLists.txt  cave.cpp  cave.h  character.cpp  character.h  databases_iit.txt  enemy.cpp  enemy.h  hero.cpp  hero.h  interface.cpp  interface.h  magicshop.cpp  magicshop.h  main.cpp
build-LoTR-Desktop_Qt_6_6_1_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-LoTR-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-26e397c66eec1bbb261f.json  codemodel-v2-70db825c4a6327138050.json  directory-.-Debug-1e6809601211397adedb.json  index-2024-04-15T15-51-24-0726.json  target-LoTR-Debug-105fbd26263e327f6ace.json
build-LoTR-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-f03e5ce8c252e46cff3a.json  codemodel-v2-0bbacc4f1fe53a73fa22.json  directory-.-Debug-365178bbc9cefd6dfe37.json  index-2024-04-15T15-51-14-0858.json  target-LoTR-Debug-bec04a9b21ae4aafaf08.json
build-LoTR-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-LoTR-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: enemy.cpp.651634F7CC9191DE.idx  enemy.h.44DBB7B012FD4427.idx  hero.cpp.7DA4E3A602B3F1C6.idx  hero.h.8DF578B4738D3466.idx  (+1 more)
